--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,31 @@
-#root {
-  max-width: 1280px;
+body {
+  font-family: 'Roboto', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: white;
+}
+
+nav {
+  background-color: rgb(81, 81, 81);
+  color: white;
+  padding: 10px 0;
+  display: flex;
+  justify-content: flex-end;
+  padding: 10px 20px;
+}
+nav ul {
+  list-style: none;
+  width: 500px;
+  display: flex;
+  justify-content: space-between;
+}
+li a {
+  color: white;
+  text-decoration: none;
+  text-shadow: 1px 1px 2px black;
+  font-size: 1.3em;
+}
+main {
+  width: 80%;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
