added more styling

--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,35 @@ h1 {
   display: flex;
   margin: 30px 10px 10px 40px;
 }
+.searchBar {
+  background-color: white;
+  border-radius: 10px;
+  width: 50%;
+  height: 2.5rem;
+  padding: 0 15px;
+  box-shadow: 0px 0px 8px black;
+  display: flex;
+  align-items: center;
+}
+.inputSearch {
+  background-color: transparent;
+  border: none;
+  height: 90%;
+  width: 100%;
+}
+.inputSearch:focus {
+  outline: none;
+}
+.singlePlayer {
+  color: white;
+  list-style: none;
+  text-decoration: none;
+  text-shadow: 1px 1px 2px black;
+  font-size: 1.3em;
+}
+input {
+  background-color: white;
+  text-align: center;
+  border-radius: 5px;
+  text-emphasis-color: black;
+}
